# intersection-detection

./: CGALStuff.cpp  CGALStuff.h  CMakeLists.txt  Matrix3.h  README.md  Statistics.h  bench.py  chronograph.h  convexes.cpp  convexes.h  gjk.cpp  gjk.h  kmeans.cpp  kmeans.h  makeInterPlot.py  obb.h  overlap.h  tettest.cpp  vec.cpp
